fix layout broken in for phone and tablet screen

--- a/src/UI/Card.css
+++ b/src/UI/Card.css
@@ -224,4 +224,8 @@
     .cardDetail_imgList {
         display: none;
     }
+
+    .card__item__content--hidden__imgList {
+        display: none;
+    }
 }
