--- a/src/components/HomePage/FilterForm.css
+++ b/src/components/HomePage/FilterForm.css
@@ -67,7 +67,8 @@
 
 @media screen and (max-width: 1000px) {
     .filter {
-        width: 100%;
+        width: 100vw;
+        height: 100vh;
         font-size: 1.5rem;
         position: fixed;
         top: 0%;
@@ -113,7 +114,7 @@
         cursor: pointer;
         background-color: black;
         color: #fff;
-        padding: 10px;
+        padding: 20px;
         border-radius: 40%;
     }
 }
