--- a/src/components/HomePage/ProductItem.css
+++ b/src/components/HomePage/ProductItem.css
@@ -99,4 +99,8 @@
     .ProductDetail_imgList {
         display: none;
     }
+
+    .ProductDetail_imgList img {
+        display: none;
+    }
 }
